# src/services/router/login.router.ts
@@ -3,18 +3,37 @@ import express from "express";
 
 const LoginRouter = express.Router();
 
+/**
+ * @openapi
+ * '/api/v1/sign-in':
+ *  post:
+ *     tags:
+ *     - Authentication
+ *     summary: Create a user
+ *     security:
+ *     - apiKeyAuth: []
+ *     requestBody:
+ *      required: true
+ *      content:
+ *        application/json:
+ *           schema:
+ *            type: object
+ *            required:
+ *              - username
+ *              - password
+ *            properties:
+ *              username:
+ *                type: string
+ *              password:
+ *                type: string
+ *     responses:
+ *      200:
+ *       $ref: '#/components/responses/200'
+ */
 LoginRouter.post("/api/v1/sign-in", async (req, res) => {
-	/**
-	 * #swagger.path = '/api/v1/sign-in'
-	 * #swagger.method = 'post'
-	 */
-	const {} = req.query;
-	const {} = req.headers;
-	const {} = req.params;
-	const { username, password }: { username: string; password: string } =
-		req.body;
+	const { username, password } = req.body;
+
 	if (username && password) {
-		res.json({ username, password });
 		return apiResult(res, true, true, null);
 	} else {
 		return apiResult(res, false, undefined, "Missing Authorization");
